--- a/storymap.ipynb
+++ b/storymap.ipynb
@@ -803,20 +803,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# path to the image used for this chapter\n",
-    "chapter_df.loc[[0], ['Media Link']] = 'media/UStopo.png'\n",
+    "chapter_df.loc[[0], ['Media Link']] = 'media/GhostForest.HEIC'\n",
     "# Name of image source\n",
-    "chapter_df.loc[[0], ['Media Credit']] = 'source here'\n",
+    "chapter_df.loc[[0], ['Media Credit']] = ''\n",
     "# Link to image\n",
-    "chapter_df.loc[[0], ['Media Credit Link']] = 'link here'\n",
+    "chapter_df.loc[[0], ['Media Credit Link']] = ''\n",
     "# Narrative description\n",
-    "chapter_df.loc[[0], ['Description']] = 'Elevation map'\n",
+    "chapter_df.loc[[0], ['Description']] = 'Intro to Ghost Forests'\n",
     "# Zoom level\n",
-    "chapter_df.loc[[0], ['Zoom']] = 15.75\n",
+    "chapter_df.loc[[0], ['Zoom']] = 10.75\n",
     "# Markers can be Hidden, Plain, or Numbered\n",
     "chapter_df.loc[[0], ['Marker']] = 'Hidden'\n",
     "# if the marker is not Hidden, you can give it a color\n",
@@ -830,12 +830,12 @@
     "# add the link to the map in the Overlay section \n",
     "chapter_df.loc[[0], ['Overlay']] = 'media/UStopo.png'\n",
     "# Set how transparent you want the Overlay image/map to be\n",
-    "chapter_df.loc[[0], ['Overlay Transparency']] = 0\n"
+    "chapter_df.loc[[0], ['Overlay Transparency']] = 0.9\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -879,151 +879,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Overview of Raleigh</td>\n",
-       "      <td>media/visit_raleigh.jpg</td>\n",
-       "      <td>Source: Raleigh Government</td>\n",
-       "      <td>https://raleighnc.gov/</td>\n",
-       "      <td>Before European colonization, the Raleigh area...</td>\n",
-       "      <td>15.75</td>\n",
+       "      <td>Ghost Forests in Coastal NC</td>\n",
+       "      <td>media/GhostForest.HEIC</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>Intro to Ghost Forests</td>\n",
+       "      <td>10.75</td>\n",
        "      <td>Hidden</td>\n",
        "      <td></td>\n",
        "      <td>Raleigh, NC</td>\n",
        "      <td>35.7796</td>\n",
        "      <td>-78.6382</td>\n",
-       "      <td>https://mapwarper.net/maps/tile/51816/{z}/{x}/...</td>\n",
+       "      <td>media/UStopo.png</td>\n",
        "      <td>0.9</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Peace College</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Shaw University</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Saint Augustines College</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>North Carolina State University At Raleigh</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Meredith College</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Wake Technical Community College</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>University Of Phoenix-Raleigh Campus</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>School Of Communication Arts</td>\n",
+       "      <td>test</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1044,74 +918,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                                      Chapter               Media Link  \\\n",
-       "0                         Overview of Raleigh  media/visit_raleigh.jpg   \n",
-       "1                               Peace College                      NaN   \n",
-       "2                             Shaw University                      NaN   \n",
-       "3                    Saint Augustines College                      NaN   \n",
-       "4  North Carolina State University At Raleigh                      NaN   \n",
-       "5                            Meredith College                      NaN   \n",
-       "6            Wake Technical Community College                      NaN   \n",
-       "7        University Of Phoenix-Raleigh Campus                      NaN   \n",
-       "8                School Of Communication Arts                      NaN   \n",
+       "                       Chapter              Media Link Media Credit  \\\n",
+       "0  Ghost Forests in Coastal NC  media/GhostForest.HEIC                \n",
+       "1                         test                     NaN          NaN   \n",
        "\n",
-       "                 Media Credit       Media Credit Link  \\\n",
-       "0  Source: Raleigh Government  https://raleighnc.gov/   \n",
-       "1                         NaN                     NaN   \n",
-       "2                         NaN                     NaN   \n",
-       "3                         NaN                     NaN   \n",
-       "4                         NaN                     NaN   \n",
-       "5                         NaN                     NaN   \n",
-       "6                         NaN                     NaN   \n",
-       "7                         NaN                     NaN   \n",
-       "8                         NaN                     NaN   \n",
+       "  Media Credit Link             Description   Zoom  Marker Marker Color  \\\n",
+       "0                    Intro to Ghost Forests  10.75  Hidden                \n",
+       "1               NaN                     NaN    NaN     NaN          NaN   \n",
        "\n",
-       "                                         Description   Zoom  Marker  \\\n",
-       "0  Before European colonization, the Raleigh area...  15.75  Hidden   \n",
-       "1                                                NaN    NaN     NaN   \n",
-       "2                                                NaN    NaN     NaN   \n",
-       "3                                                NaN    NaN     NaN   \n",
-       "4                                                NaN    NaN     NaN   \n",
-       "5                                                NaN    NaN     NaN   \n",
-       "6                                                NaN    NaN     NaN   \n",
-       "7                                                NaN    NaN     NaN   \n",
-       "8                                                NaN    NaN     NaN   \n",
-       "\n",
-       "  Marker Color     Location  Latitude  Longitude  \\\n",
-       "0               Raleigh, NC   35.7796   -78.6382   \n",
-       "1          NaN          NaN       NaN        NaN   \n",
-       "2          NaN          NaN       NaN        NaN   \n",
-       "3          NaN          NaN       NaN        NaN   \n",
-       "4          NaN          NaN       NaN        NaN   \n",
-       "5          NaN          NaN       NaN        NaN   \n",
-       "6          NaN          NaN       NaN        NaN   \n",
-       "7          NaN          NaN       NaN        NaN   \n",
-       "8          NaN          NaN       NaN        NaN   \n",
-       "\n",
-       "                                             Overlay  Overlay Transparency  \\\n",
-       "0  https://mapwarper.net/maps/tile/51816/{z}/{x}/...                   0.9   \n",
-       "1                                                NaN                   NaN   \n",
-       "2                                                NaN                   NaN   \n",
-       "3                                                NaN                   NaN   \n",
-       "4                                                NaN                   NaN   \n",
-       "5                                                NaN                   NaN   \n",
-       "6                                                NaN                   NaN   \n",
-       "7                                                NaN                   NaN   \n",
-       "8                                                NaN                   NaN   \n",
+       "      Location  Latitude  Longitude           Overlay  Overlay Transparency  \\\n",
+       "0  Raleigh, NC   35.7796   -78.6382  media/UStopo.png                   0.9   \n",
+       "1          NaN       NaN        NaN               NaN                   NaN   \n",
        "\n",
        "   GeoJSON Overlay  GeoJSON Feature Properties  \n",
        "0              NaN                         NaN  \n",
-       "1              NaN                         NaN  \n",
-       "2              NaN                         NaN  \n",
-       "3              NaN                         NaN  \n",
-       "4              NaN                         NaN  \n",
-       "5              NaN                         NaN  \n",
-       "6              NaN                         NaN  \n",
-       "7              NaN                         NaN  \n",
-       "8              NaN                         NaN  "
+       "1              NaN                         NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
