updated storymap settings

--- a/storymap.ipynb
+++ b/storymap.ipynb
@@ -537,16 +537,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customize</th>\n",
+       "      <th>Hints</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setting</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Storymap Info</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>For help, see tutorial in [HandsOnDataViz.org]...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Storymap Title</th>\n",
+       "      <td>Ghost Forests in Coastal NC</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Storymap Subtitle</th>\n",
+       "      <td>Colleges and Universities in Wake County&lt;br&gt;&lt;s...</td>\n",
+       "      <td>Add your subtitle, or delete that portion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Storymap Logo</th>\n",
+       "      <td>media/ncsu_logo.jpg</td>\n",
+       "      <td>Path to a logo image</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Google Analytics Tracking ID</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sample format: UA-5488840-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Map Settings</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Basemap Tiles</th>\n",
+       "      <td>CartoDB.Positron</td>\n",
+       "      <td>[Drop-down menu for background basemap tiles](...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoom Controls</th>\n",
+       "      <td>bottomright</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Narrative Background Color</th>\n",
+       "      <td>lightgray</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Narrative Text Color</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Narrative Link Color</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Active Chapter Background Color</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Media Container Height</th>\n",
+       "      <td>300</td>\n",
+       "      <td>Maximum height of the image, in pixels. 200 is...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pixels After Final Chapter</th>\n",
+       "      <td>600</td>\n",
+       "      <td>In pixels, at least 100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Enable Lightbox for Images</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes or no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Credits</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Author Name</th>\n",
+       "      <td>Isabella Thayer</td>\n",
+       "      <td>Appears in map credits as \"View data by...\" (o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Author Email or Website</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Create link in Author Name by inserting your e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Author GitHub Repo Link</th>\n",
+       "      <td>https://github.com/handsondataviz/leaflet-stor...</td>\n",
+       "      <td>Insert your code repo URL to appear as link in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Code Credit</th>\n",
+       "      <td>&lt;a href=\"https://handsondataviz.org\"&gt;HandsOnDa...</td>\n",
+       "      <td>Appears in credits as \"...code by...\" (or leav...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                         Customize  \\\n",
+       "Setting                                                                              \n",
+       "Storymap Info                                                                  NaN   \n",
+       "Storymap Title                                         Ghost Forests in Coastal NC   \n",
+       "Storymap Subtitle                Colleges and Universities in Wake County<br><s...   \n",
+       "Storymap Logo                                                  media/ncsu_logo.jpg   \n",
+       "Google Analytics Tracking ID                                                   NaN   \n",
+       "Map Settings                                                                   NaN   \n",
+       "Basemap Tiles                                                     CartoDB.Positron   \n",
+       "Zoom Controls                                                          bottomright   \n",
+       "Narrative Background Color                                               lightgray   \n",
+       "Narrative Text Color                                                           NaN   \n",
+       "Narrative Link Color                                                           NaN   \n",
+       "Active Chapter Background Color                                                NaN   \n",
+       "Media Container Height                                                         300   \n",
+       "Pixels After Final Chapter                                                     600   \n",
+       "Enable Lightbox for Images                                                     yes   \n",
+       "Credits                                                                        NaN   \n",
+       "Author Name                                                        Isabella Thayer   \n",
+       "Author Email or Website                                                        NaN   \n",
+       "Author GitHub Repo Link          https://github.com/handsondataviz/leaflet-stor...   \n",
+       "Code Credit                      <a href=\"https://handsondataviz.org\">HandsOnDa...   \n",
+       "\n",
+       "                                                                             Hints  \n",
+       "Setting                                                                             \n",
+       "Storymap Info                    For help, see tutorial in [HandsOnDataViz.org]...  \n",
+       "Storymap Title                                                                 NaN  \n",
+       "Storymap Subtitle                        Add your subtitle, or delete that portion  \n",
+       "Storymap Logo                                                 Path to a logo image  \n",
+       "Google Analytics Tracking ID                          Sample format: UA-5488840-29  \n",
+       "Map Settings                                                                   NaN  \n",
+       "Basemap Tiles                    [Drop-down menu for background basemap tiles](...  \n",
+       "Zoom Controls                                                                  NaN  \n",
+       "Narrative Background Color                                                     NaN  \n",
+       "Narrative Text Color                                                           NaN  \n",
+       "Narrative Link Color                                                           NaN  \n",
+       "Active Chapter Background Color                                                NaN  \n",
+       "Media Container Height           Maximum height of the image, in pixels. 200 is...  \n",
+       "Pixels After Final Chapter                                 In pixels, at least 100  \n",
+       "Enable Lightbox for Images                                               yes or no  \n",
+       "Credits                                                                        NaN  \n",
+       "Author Name                      Appears in map credits as \"View data by...\" (o...  \n",
+       "Author Email or Website          Create link in Author Name by inserting your e...  \n",
+       "Author GitHub Repo Link          Insert your code repo URL to appear as link in...  \n",
+       "Code Credit                      Appears in credits as \"...code by...\" (or leav...  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next, make edits to the Author Name and Author Github Repo Link so it has your information\n",
     "options_df['Customize']['Author Name'] = 'Isabella Thayer'\n",
-    "options_df['Customize']['Author Github Repo Link'] = 'https://github.com/mdgaines/leaflet-storymap-nr491'\n",
+    "options_df['Customize']['Author Github Repo Link'] = 'https://iethayer.github.io/GIS495_final_project/'\n",
+    "options_df['Customize']['Storymap Title'] = 'Ghost Forests in Coastal NC'\n",
     "\n",
     "# save your options df as Options.csv\n",
-    "options_df.to_csv('./csv/Options.csv')"
+    "options_df.to_csv('./csv/Options.csv')\n",
+    "\n",
+    "options_df"
    ]
   },
   {
@@ -730,6 +921,16 @@
    ],
    "source": [
     "chapter_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## need to save chapters csv after edits !! ##\n",
+    "chapter_df.to_csv('./csv/Chapters.csv')"
    ]
   },
   {
@@ -942,214 +1143,6 @@
    ],
    "source": [
     "chapter_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>FEATTYPE</th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>ADDRESS</th>\n",
-       "      <th>CITY</th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>ZIP</th>\n",
-       "      <th>ZIPP4</th>\n",
-       "      <th>COUNTY</th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>NAICSCODE</th>\n",
-       "      <th>NAICSDESCR</th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>DEGREE</th>\n",
-       "      <th>ENROLL</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>geoid</th>\n",
-       "      <th>FOUNDED</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>22</td>\n",
-       "      <td>10274261</td>\n",
-       "      <td>POINT</td>\n",
-       "      <td>PEACE COLLEGE</td>\n",
-       "      <td>15 E PEACE ST</td>\n",
-       "      <td>RALEIGH</td>\n",
-       "      <td>NC</td>\n",
-       "      <td>27604</td>\n",
-       "      <td>1176</td>\n",
-       "      <td>WAKE</td>\n",
-       "      <td>37183</td>\n",
-       "      <td>611310</td>\n",
-       "      <td>COLLEGES (EXCEPT JUNIOR COLLEGES)</td>\n",
-       "      <td>-78.637376</td>\n",
-       "      <td>35.788240</td>\n",
-       "      <td>BACHELOR'S DEGREE</td>\n",
-       "      <td>668</td>\n",
-       "      <td>POINT (-78.63737 35.78824)</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>32</td>\n",
-       "      <td>10272064</td>\n",
-       "      <td>POINT</td>\n",
-       "      <td>SHAW UNIVERSITY</td>\n",
-       "      <td>118 E SOUTH ST</td>\n",
-       "      <td>RALEIGH</td>\n",
-       "      <td>NC</td>\n",
-       "      <td>27601</td>\n",
-       "      <td>2341</td>\n",
-       "      <td>WAKE</td>\n",
-       "      <td>37183</td>\n",
-       "      <td>611310</td>\n",
-       "      <td>UNIVERSITIES</td>\n",
-       "      <td>-78.637986</td>\n",
-       "      <td>35.771817</td>\n",
-       "      <td>MASTER'S DEGREE</td>\n",
-       "      <td>2762</td>\n",
-       "      <td>POINT (-78.63798 35.77182)</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>65</td>\n",
-       "      <td>10272187</td>\n",
-       "      <td>POINT</td>\n",
-       "      <td>SAINT AUGUSTINES COLLEGE</td>\n",
-       "      <td>1315 OAKWOOD AVENUE</td>\n",
-       "      <td>RALEIGH</td>\n",
-       "      <td>NC</td>\n",
-       "      <td>27610</td>\n",
-       "      <td>2247</td>\n",
-       "      <td>WAKE</td>\n",
-       "      <td>37183</td>\n",
-       "      <td>611310</td>\n",
-       "      <td>COLLEGES (EXCEPT JUNIOR COLLEGES)</td>\n",
-       "      <td>-78.620682</td>\n",
-       "      <td>35.784495</td>\n",
-       "      <td>BACHELOR'S DEGREE</td>\n",
-       "      <td>1163</td>\n",
-       "      <td>POINT (-78.62068 35.78449)</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1867</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>97</td>\n",
-       "      <td>10274257</td>\n",
-       "      <td>POINT</td>\n",
-       "      <td>NORTH CAROLINA STATE UNIVERSITY AT RALEIGH</td>\n",
-       "      <td>2200 HILLSBOROUGH STREET</td>\n",
-       "      <td>RALEIGH</td>\n",
-       "      <td>NC</td>\n",
-       "      <td>27695</td>\n",
-       "      <td>0001</td>\n",
-       "      <td>WAKE</td>\n",
-       "      <td>37183</td>\n",
-       "      <td>611310</td>\n",
-       "      <td>UNIVERSITIES</td>\n",
-       "      <td>-78.664483</td>\n",
-       "      <td>35.786472</td>\n",
-       "      <td>DOCTOR'S DEGREE</td>\n",
-       "      <td>30148</td>\n",
-       "      <td>POINT (-78.66448 35.78647)</td>\n",
-       "      <td>97</td>\n",
-       "      <td>1887</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>57</td>\n",
-       "      <td>10274245</td>\n",
-       "      <td>POINT</td>\n",
-       "      <td>MEREDITH COLLEGE</td>\n",
-       "      <td>3800 HILLSBOROUGH ST</td>\n",
-       "      <td>RALEIGH</td>\n",
-       "      <td>NC</td>\n",
-       "      <td>27607</td>\n",
-       "      <td>5237</td>\n",
-       "      <td>WAKE</td>\n",
-       "      <td>37183</td>\n",
-       "      <td>611310</td>\n",
-       "      <td>COLLEGES (EXCEPT JUNIOR COLLEGES)</td>\n",
-       "      <td>-78.688041</td>\n",
-       "      <td>35.794525</td>\n",
-       "      <td>MASTER'S DEGREE</td>\n",
-       "      <td>2168</td>\n",
-       "      <td>POINT (-78.68804 35.79452)</td>\n",
-       "      <td>57</td>\n",
-       "      <td>1891</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index        ID FEATTYPE                                        NAME  \\\n",
-       "0     22  10274261    POINT                               PEACE COLLEGE   \n",
-       "1     32  10272064    POINT                             SHAW UNIVERSITY   \n",
-       "2     65  10272187    POINT                    SAINT AUGUSTINES COLLEGE   \n",
-       "3     97  10274257    POINT  NORTH CAROLINA STATE UNIVERSITY AT RALEIGH   \n",
-       "4     57  10274245    POINT                            MEREDITH COLLEGE   \n",
-       "\n",
-       "                    ADDRESS     CITY STATE    ZIP ZIPP4 COUNTY   FIPS  \\\n",
-       "0             15 E PEACE ST  RALEIGH    NC  27604  1176   WAKE  37183   \n",
-       "1            118 E SOUTH ST  RALEIGH    NC  27601  2341   WAKE  37183   \n",
-       "2       1315 OAKWOOD AVENUE  RALEIGH    NC  27610  2247   WAKE  37183   \n",
-       "3  2200 HILLSBOROUGH STREET  RALEIGH    NC  27695  0001   WAKE  37183   \n",
-       "4      3800 HILLSBOROUGH ST  RALEIGH    NC  27607  5237   WAKE  37183   \n",
-       "\n",
-       "  NAICSCODE                         NAICSDESCR          X          Y  \\\n",
-       "0    611310  COLLEGES (EXCEPT JUNIOR COLLEGES) -78.637376  35.788240   \n",
-       "1    611310                       UNIVERSITIES -78.637986  35.771817   \n",
-       "2    611310  COLLEGES (EXCEPT JUNIOR COLLEGES) -78.620682  35.784495   \n",
-       "3    611310                       UNIVERSITIES -78.664483  35.786472   \n",
-       "4    611310  COLLEGES (EXCEPT JUNIOR COLLEGES) -78.688041  35.794525   \n",
-       "\n",
-       "              DEGREE  ENROLL                    geometry geoid FOUNDED  \n",
-       "0  BACHELOR'S DEGREE     668  POINT (-78.63737 35.78824)    22    1857  \n",
-       "1    MASTER'S DEGREE    2762  POINT (-78.63798 35.77182)    32    1865  \n",
-       "2  BACHELOR'S DEGREE    1163  POINT (-78.62068 35.78449)    65    1867  \n",
-       "3    DOCTOR'S DEGREE   30148  POINT (-78.66448 35.78647)    97    1887  \n",
-       "4    MASTER'S DEGREE    2168  POINT (-78.68804 35.79452)    57    1891  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nc_coll_raleigh = nc_coll_raleigh.reset_index()\n",
-    "nc_coll_raleigh.head()"
    ]
   },
   {
@@ -1463,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
