saved changes to csv

--- a/storymap.ipynb
+++ b/storymap.ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,13 +794,15 @@
     "    \n",
     "    # creates new header name & row\n",
     "    writer.writerow(['Ghost Forests in Coastal NC'])\n",
-    "    writer.writerow(['test'])\n",
-    "    \n"
+    "    writer.writerow(['Elevaiton'])\n",
+    "    writer.writerow(['Saltwater Intrusion'])\n",
+    "    writer.writerow(['Sea Level Rise'])\n",
+    "    writer.writerow(['Storm Surge & Flooding'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +864,61 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>test</td>\n",
+       "      <td>Elevaiton</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Saltwater Intrusion</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sea Level Rise</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Storm Surge &amp; Flooding</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -885,18 +941,27 @@
       "text/plain": [
        "                       Chapter  Media Link  Media Credit  Media Credit Link  \\\n",
        "0  Ghost Forests in Coastal NC         NaN           NaN                NaN   \n",
-       "1                         test         NaN           NaN                NaN   \n",
+       "1                    Elevaiton         NaN           NaN                NaN   \n",
+       "2          Saltwater Intrusion         NaN           NaN                NaN   \n",
+       "3               Sea Level Rise         NaN           NaN                NaN   \n",
+       "4       Storm Surge & Flooding         NaN           NaN                NaN   \n",
        "\n",
        "   Description  Zoom  Marker  Marker Color  Location  Latitude  Longitude  \\\n",
        "0          NaN   NaN     NaN           NaN       NaN       NaN        NaN   \n",
        "1          NaN   NaN     NaN           NaN       NaN       NaN        NaN   \n",
+       "2          NaN   NaN     NaN           NaN       NaN       NaN        NaN   \n",
+       "3          NaN   NaN     NaN           NaN       NaN       NaN        NaN   \n",
+       "4          NaN   NaN     NaN           NaN       NaN       NaN        NaN   \n",
        "\n",
        "   Overlay  Overlay Transparency  GeoJSON Overlay  GeoJSON Feature Properties  \n",
        "0      NaN                   NaN              NaN                         NaN  \n",
-       "1      NaN                   NaN              NaN                         NaN  "
+       "1      NaN                   NaN              NaN                         NaN  \n",
+       "2      NaN                   NaN              NaN                         NaN  \n",
+       "3      NaN                   NaN              NaN                         NaN  \n",
+       "4      NaN                   NaN              NaN                         NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -921,23 +986,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chapter_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## need to save chapters csv after edits !! ##\n",
-    "chapter_df.to_csv('./csv/Chapters.csv')"
    ]
   },
   {
@@ -949,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +1037,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_30ae16109f18947be267ee189e6039b9 {\n",
+       "                #map_8445e0f28c83acb36817a92d3b8f3037 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -996,14 +1051,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_30ae16109f18947be267ee189e6039b9&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8445e0f28c83acb36817a92d3b8f3037&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_30ae16109f18947be267ee189e6039b9 = L.map(\n",
-       "                &quot;map_30ae16109f18947be267ee189e6039b9&quot;,\n",
+       "            var map_8445e0f28c83acb36817a92d3b8f3037 = L.map(\n",
+       "                &quot;map_8445e0f28c83acb36817a92d3b8f3037&quot;,\n",
        "                {\n",
        "                    center: [35.7796, -78.6382],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -1012,25 +1067,25 @@
        "                    preferCanvas: false,\n",
        "                }\n",
        "            );\n",
-       "            L.control.scale().addTo(map_30ae16109f18947be267ee189e6039b9);\n",
+       "            L.control.scale().addTo(map_8445e0f28c83acb36817a92d3b8f3037);\n",
        "\n",
        "            \n",
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_5e4345be5b01e79f23422a6706fdfc16 = L.tileLayer(\n",
+       "            var tile_layer_335fc6e895ddd7b1bdb9ea2ca5070779 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_30ae16109f18947be267ee189e6039b9);\n",
+       "            ).addTo(map_8445e0f28c83acb36817a92d3b8f3037);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x10fe4a270>"
+       "<folium.folium.Map at 0x10ff6d220>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,32 +1133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'media/GhostForest.HEIC' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Media Link']] = 'media/GhostForest.HEIC'\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:6: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Media Credit']] = ''\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Media Credit Link']] = ''\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Ghost forests are patches of dead trees found in coastal ecosystems. These dead trees stay standing upright, appearing gray and bare, resulting in an eerie scene. Once lush coastal forests are dieing and transitioning into ghost forests at an alarming rate due to rising sea levels and an increase in the strength and frequency of tropical storms. ' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Description']] = chap_zero_descrip\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:14: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Hidden' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Marker']] = 'Hidden'\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Marker Color']] = ''\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Raleigh, NC' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Location']] = 'Raleigh, NC'\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/4287278773.py:24: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'media/UStopo.png' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Overlay']] = 'media/UStopo.png'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Chapter 0: intro ##\n",
     "chap_zero_descrip = 'Ghost forests are patches of dead trees found in coastal ecosystems. These dead trees stay standing upright, appearing gray and bare, resulting in an eerie scene. Once lush coastal forests are dieing and transitioning into ghost forests at an alarming rate due to rising sea levels and an increase in the strength and frequency of tropical storms. '\n",
@@ -1135,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1229,61 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>test</td>\n",
+       "      <td>Elevaiton</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Saltwater Intrusion</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sea Level Rise</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Storm Surge &amp; Flooding</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1220,28 +1306,50 @@
       "text/plain": [
        "                       Chapter              Media Link Media Credit  \\\n",
        "0  Ghost Forests in Coastal NC  media/GhostForest.HEIC                \n",
-       "1                         test                     NaN          NaN   \n",
+       "1                    Elevaiton                     NaN          NaN   \n",
+       "2          Saltwater Intrusion                     NaN          NaN   \n",
+       "3               Sea Level Rise                     NaN          NaN   \n",
+       "4       Storm Surge & Flooding                     NaN          NaN   \n",
        "\n",
        "  Media Credit Link                                        Description   Zoom  \\\n",
        "0                    Ghost forests are patches of dead trees found ...  10.75   \n",
        "1               NaN                                                NaN    NaN   \n",
+       "2               NaN                                                NaN    NaN   \n",
+       "3               NaN                                                NaN    NaN   \n",
+       "4               NaN                                                NaN    NaN   \n",
        "\n",
        "   Marker Marker Color     Location  Latitude  Longitude           Overlay  \\\n",
        "0  Hidden               Raleigh, NC   35.7796   -78.6382  media/UStopo.png   \n",
        "1     NaN          NaN          NaN       NaN        NaN               NaN   \n",
+       "2     NaN          NaN          NaN       NaN        NaN               NaN   \n",
+       "3     NaN          NaN          NaN       NaN        NaN               NaN   \n",
+       "4     NaN          NaN          NaN       NaN        NaN               NaN   \n",
        "\n",
        "   Overlay Transparency  GeoJSON Overlay  GeoJSON Feature Properties  \n",
        "0                   0.9              NaN                         NaN  \n",
-       "1                   NaN              NaN                         NaN  "
+       "1                   NaN              NaN                         NaN  \n",
+       "2                   NaN              NaN                         NaN  \n",
+       "3                   NaN              NaN                         NaN  \n",
+       "4                   NaN              NaN                         NaN  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chapter_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## need to save chapters csv after edits !! ##\n",
+    "chapter_df.to_csv('./csv/Chapters.csv')"
    ]
   },
   {
